--- a/styles/_14.list-collection.scss
+++ b/styles/_14.list-collection.scss
@@ -3,6 +3,7 @@
   z-index: 1;
   width: 100%;
   min-height: 20rem;
+  overflow: hidden;
   &__content {
     z-index: 2;
 
